// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReactFloater > with \`arrow\` > should render a custom arrow floater with click 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="bottom"
  data-popper-reference-hidden=""
  id="test"
  style="z-index: 100; position: absolute; left: 0px; top: 0px; margin: 0px; right: auto; bottom: auto; transform: translate(0px, 15px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 300px; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; padding: 80px 0px 0px;"
  >
    <div
      class="__floater__body"
    >
      <div
        class="__floater__container"
        style="background-color: rgb(255, 255, 255); color: rgb(102, 102, 102); min-height: 60px; min-width: 200px; padding: 20px; position: relative; z-index: 10;"
      >
        <div
          class="__floater__content"
          style="font-size: 15px;"
        >
          Hello! This is my content!
        </div>
      </div>
      <span
        style="color: rgb(107, 162, 255); height: 80px; width: 10px; position: absolute; left: 0px; transform: translate(8px, 0px); top: 0px;"
      >
        <svg
          height="100px"
          version="1.1"
          viewBox="0 0 10 100"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M5.19249228e-07,5.16768813 C0.000571745188,2.3180242 2.3238984,6.52762368e-06 5.17356233,6.52762368e-06 C7.4961469,-0.00369898343 9.46628897,1.57062447 10.1275925,3.67813093 C11.5918888,8.26905035 5.18127186,100.000007 5.18127186,100.000007 L1.9635443,41.3615605 C0.907405183,22.0686414 -0.000792731847,5.40502691 5.19249228e-07,5.16768813 Z M5.18507488,2.58554059 C3.75638551,2.5874823 2.59249512,3.74291582 2.59443184,5.17160518 C2.59160462,6.52075954 3.7928988,13.3574741 4.95859452,14.5045202 C6.56709198,13.5758538 7.69207267,4.78979882 7.69207267,4.78979882 C7.50203478,3.55199808 6.48229278,2.58749911 5.18507488,2.58554059 Z"
              fill="currentColor"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`ReactFloater > with \`component\` as element > should show the floater with click 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="bottom"
  data-popper-reference-hidden=""
  id="test"
  style="z-index: 1000; position: absolute; left: 0px; top: 0px; margin: 0px; right: auto; bottom: auto; transform: translate(0px, 15px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; z-index: 1000; padding: 16px 0px 0px;"
  >
    <div
      class="__floater__body"
    >
      <div
        class="css-lgzz4i"
      >
        <div>
          Styled
        </div>
        <button
          type="button"
        >
          close
        </button>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); top: 0px;"
      >
        <svg
          height="16"
          version="1.1"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="32,16 16,0 0,16"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`ReactFloater > with \`component\` as function > should show the floater with click 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="bottom"
  data-popper-reference-hidden=""
  id="test"
  style="z-index: 100; position: absolute; left: 0px; top: 0px; margin: 0px; right: auto; bottom: auto; transform: translate(0px, 15px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; padding: 16px 0px 0px;"
  >
    <div
      class="__floater__body"
    >
      <div
        class="css-lgzz4i"
      >
        <div>
          Styled
        </div>
        <button
          type="button"
        >
          close
        </button>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); top: 0px;"
      >
        <svg
          height="16"
          version="1.1"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="32,16 16,0 0,16"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`ReactFloater > with \`placement\` center > should show the floater with click 1`] = `
<div
  id="test"
  style="z-index: 100;"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 300px; opacity: 1; position: fixed; transition: opacity 0.3s; visibility: visible; left: 50%; top: 50%; transform: translate(-50%, -50%);"
  >
    <div
      class="__floater__body"
    >
      <div
        class="__floater__container"
        style="background-color: rgb(255, 255, 255); color: rgb(102, 102, 102); min-height: 60px; min-width: 200px; padding: 20px; position: relative; z-index: 10;"
      >
        <div
          class="__floater__content"
          style="font-size: 15px;"
        >
          Hello! This is my content!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ReactFloater > with \`placement\` left > should show the floater with click 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="left"
  data-popper-reference-hidden=""
  id="test"
  style="z-index: 100; position: absolute; left: auto; top: 0px; margin: 0px; right: 0px; bottom: auto; transform: translate(-15px, 0px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 300px; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; padding: 0px 16px 0px 0px;"
  >
    <div
      class="__floater__body"
    >
      <div
        class="__floater__container"
        style="background-color: rgb(255, 255, 255); color: rgb(102, 102, 102); min-height: 60px; min-width: 200px; padding: 20px; position: relative; z-index: 10;"
      >
        <div
          class="__floater__content"
          style="font-size: 15px;"
        >
          Hello! This is my content!
        </div>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; top: 0px; transform: translate(0px, 8px); right: 0px;"
      >
        <svg
          height="32"
          version="1.1"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="0,0 16,16 0,32"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`ReactFloater > with \`placement\` right > should show the floater with click 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="right"
  data-popper-reference-hidden=""
  id="test"
  style="z-index: 100; position: absolute; left: 0px; top: 0px; margin: 0px; right: auto; bottom: auto; transform: translate(15px, 0px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 300px; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; padding: 0px 0px 0px 16px;"
  >
    <div
      class="__floater__body"
    >
      <div
        class="__floater__container"
        style="background-color: rgb(255, 255, 255); color: rgb(102, 102, 102); min-height: 60px; min-width: 200px; padding: 20px; position: relative; z-index: 10;"
      >
        <div
          class="__floater__content"
          style="font-size: 15px;"
        >
          Hello! This is my content!
        </div>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; top: 0px; transform: translate(0px, 8px); left: 0px;"
      >
        <svg
          height="32"
          version="1.1"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="16,32 16,0 0,16"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`ReactFloater > with \`placement\` top > should show the floater with click 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="top"
  data-popper-reference-hidden=""
  id="test"
  style="z-index: 100; position: absolute; left: 0px; top: auto; margin: 0px; right: auto; bottom: 0px; transform: translate(0px, -15px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 300px; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; padding: 0px 0px 16px;"
  >
    <div
      class="__floater__body"
    >
      <div
        class="__floater__container"
        style="background-color: rgb(255, 255, 255); color: rgb(102, 102, 102); min-height: 60px; min-width: 200px; padding: 20px; position: relative; z-index: 10;"
      >
        <div
          class="__floater__content"
          style="font-size: 15px;"
        >
          Hello! This is my content!
        </div>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); bottom: 0px;"
      >
        <svg
          height="16"
          version="1.1"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="0,0 16,16 32,0"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`ReactFloater > with \`title\`, \`footer\` and \`closeBtn\` > should render the floater 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="bottom"
  data-popper-reference-hidden=""
  id="test"
  style="z-index: 100; position: absolute; left: 0px; top: 0px; margin: 0px; right: auto; bottom: auto; transform: translate(0px, 15px);"
>
  <div
    class="__floater __floater__open"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 300px; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; padding: 16px 0px 0px;"
  >
    <div
      class="__floater__body"
    >
      <div
        class="__floater__container"
        style="background-color: rgb(255, 255, 255); color: rgb(102, 102, 102); min-height: 60px; min-width: 200px; padding: 20px; position: relative; z-index: 10;"
      >
        <button
          aria-label="close"
          style="background-color: transparent; border: 0px; border-radius: 0px; font-size: 0px; outline: none; padding: 10px; position: absolute; right: 0px; top: 0px; -webkit-appearance: none;"
          type="button"
        >
          <svg
            height="15px"
            preserveAspectRatio="xMidYMid"
            version="1.1"
            viewBox="0 0 18 18"
            width="15px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8.13911129,9.00268191 L0.171521827,17.0258467 C-0.0498027049,17.248715 -0.0498027049,17.6098394 0.171521827,17.8327545 C0.28204354,17.9443526 0.427188206,17.9998706 0.572051765,17.9998706 C0.71714958,17.9998706 0.862013139,17.9443526 0.972581703,17.8327545 L9.0000937,9.74924618 L17.0276057,17.8327545 C17.1384085,17.9443526 17.2832721,17.9998706 17.4281356,17.9998706 C17.5729992,17.9998706 17.718097,17.9443526 17.8286656,17.8327545 C18.0499901,17.6098862 18.0499901,17.2487618 17.8286656,17.0258467 L9.86135722,9.00268191 L17.8340066,0.973848225 C18.0553311,0.750979934 18.0553311,0.389855532 17.8340066,0.16694039 C17.6126821,-0.0556467968 17.254037,-0.0556467968 17.0329467,0.16694039 L9.00042166,8.25611765 L0.967006424,0.167268345 C0.745681892,-0.0553188426 0.387317931,-0.0553188426 0.165993399,0.167268345 C-0.0553311331,0.390136635 -0.0553311331,0.751261038 0.165993399,0.974176179 L8.13920499,9.00268191 L8.13911129,9.00268191 Z"
                fill="#555"
              />
            </g>
          </svg>
        </button>
        <div
          class="__floater__title"
          style="border-bottom: 1px solid rgb(85, 85, 85); color: rgb(85, 85, 85); font-size: 18px; margin-bottom: 5px; padding-bottom: 6px; padding-right: 18px;"
        >
          Title
        </div>
        <div
          class="__floater__content"
          style="font-size: 15px;"
        >
          Hello! This is my content!
        </div>
        <div
          class="__floater__footer"
          style="border-top: 1px solid rgb(204, 204, 204); font-size: 13px; margin-top: 10px; padding-top: 5px;"
        >
          Footer
        </div>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); top: 0px;"
      >
        <svg
          height="16"
          version="1.1"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="32,16 16,0 0,16"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`ReactFloater > with ReactElement \`title\` and \`footer\` > should render ReactElement title and footer 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="bottom"
  data-popper-reference-hidden=""
  id="test"
  style="z-index: 100; position: absolute; left: 0px; top: 0px; margin: 0px; right: auto; bottom: auto; transform: translate(0px, 15px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 300px; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; padding: 16px 0px 0px;"
  >
    <div
      class="__floater__body"
    >
      <div
        class="__floater__container"
        style="background-color: rgb(255, 255, 255); color: rgb(102, 102, 102); min-height: 60px; min-width: 200px; padding: 20px; position: relative; z-index: 10;"
      >
        <h2>
          Custom Title
        </h2>
        <div
          class="__floater__content"
          style="font-size: 15px;"
        >
          Hello! This is my content!
        </div>
        <div>
          Custom Footer
        </div>
      </div>
      <span
        class="__floater__arrow"
        style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); top: 0px;"
      >
        <svg
          height="16"
          version="1.1"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            fill="#fff"
            points="32,16 16,0 0,16"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`ReactFloater > with custom \`arrow\` and \`placement\` left > should render with left/right size swap 1`] = `
<div
  data-popper-escaped=""
  data-popper-placement="left"
  data-popper-reference-hidden=""
  id="test"
  style="z-index: 100; position: absolute; left: auto; top: 0px; margin: 0px; right: 0px; bottom: auto; transform: translate(-15px, 0px);"
>
  <div
    class="__floater"
    role="tooltip"
    style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 300px; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; padding: 0px 80px 0px 0px;"
  >
    <div
      class="__floater__body"
    >
      <div
        class="__floater__container"
        style="background-color: rgb(255, 255, 255); color: rgb(102, 102, 102); min-height: 60px; min-width: 200px; padding: 20px; position: relative; z-index: 10;"
      >
        <div
          class="__floater__content"
          style="font-size: 15px;"
        >
          Hello! This is my content!
        </div>
      </div>
      <span
        style="color: rgb(107, 162, 255); height: 10px; width: 80px; position: absolute; top: 0px; transform: translate(0px, 8px); right: 0px;"
      >
        <span>
          arrow
        </span>
      </span>
    </div>
  </div>
</div>
`;
